# ExpertASD

./: .env.example  .gitignore  Makefile  PLAN.md  README.md  docker-compose.yml  selected_tts_systems.csv  tts_systems.txt
config/: client_params.yaml
data_fixtures/smoke/: reference_female_en.txt  smoke_texts.json
data_fixtures/smoke/trump_long/: metadata.csv
data_fixtures/smoke/trump_short/: meta_data.csv
docs/: adding-a-new-tts-system.md  architecture.md  licensing.md  metadata-schema.md  resource-requirements.md  runbook.md
scripts/: _params.py  check_data_disk.sh  generate_from_dir.py  generate_from_metadata.py  smoke_test.py  warm_weights.sh
services/gateway/: Dockerfile  main.py  requirements.txt
services/workers/cosyvoice2/: Dockerfile  model.py  worker.py
services/workers/f5tts/: Dockerfile  model.py  worker.py
services/workers/fishspeech/: Dockerfile  model.py  worker.py
services/workers/llasa/: Dockerfile  model.py  worker.py
services/workers/maskgct/: Dockerfile  model.py  worker.py
services/workers/metavoice/: Dockerfile  model.py  worker.py
services/workers/ssrspeech/: Dockerfile  model.py  worker.py
services/workers/styletts2/: Dockerfile  model.py  worker.py
services/workers/tortoise/: Dockerfile  entrypoint.sh  model.py  worker.py
services/workers/xtts/: Dockerfile  model.py  worker.py
shared/python/: pyproject.toml  requirements.txt
shared/python/expertasd_common/: __init__.py  health.py  jobs.py  model_base.py  queue.py  schemas.py  storage.py
shared/registry/: tts_systems.yaml
shared/schemas/: openapi.yaml
