[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "expertasd-common"
version = "0.1.0"
description = "Shared schemas, storage, queue, and health helpers for the ExpertASD TTS pipeline"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "redis>=5.0",
    "rq>=1.15",
]

[tool.setuptools.packages.find]
include = ["expertasd_common*"]
